--- a/src/style/Cart.css
+++ b/src/style/Cart.css
@@ -10,6 +10,12 @@
     margin: 1rem auto;
 }
 
+.cart-info {
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+}
+
 .cart-card img {
     width: 70px;
     height: 70px;
@@ -17,6 +23,22 @@
 
 .title-price {
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.add {
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    padding: 5px 10px;
+    background-color: rgb(238, 173, 88);
+    color: rgb(0, 0, 0);
+    border-radius: 5px;
+    font-weight: bold;
+    margin-top: 5%;
 }
 
 .remove {
@@ -24,7 +46,7 @@
     display: flex;
     align-items: center;
     padding: 5px 10px;
-    background-color: rgb(238, 173, 88);
+    background-color: rgb(248, 220, 184);
     color: rgb(0, 0, 0);
     border-radius: 5px;
     font-weight: bold;
@@ -61,10 +83,15 @@
 .total-price {
     text-align: center;
     width: 90%;
-    height: 40px;
+    height: 45px;
     margin: 2rem auto;
+    padding: 0.5rem auto;
     background-color: rgb(233, 184, 93);
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (min-width: 800px) {
