--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -9,6 +9,11 @@
     /* border: 1px solid red; */
 }
 
+.logo {
+    color: black;
+    text-decoration: none;
+}
+
 .navbar-nav {
     width: 30vw;
     display: flex;
