localstorage used to track the user

--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -9,6 +9,11 @@
     /* border: 1px solid red; */
 }
 
+.logo-user .user-name {
+    font-size: small;
+    text-align: center;
+}
+
 .logo {
     color: black;
     text-decoration: none;
